2005-12-14  Atsushi Enomoto <atsushi@ximian.com>

	* XmlNode.cs : (GetNamespaceOfPrefix) return const xml/xmlns URIs
	  only under 2.0.

2005-12-14  Atsushi Enomoto <atsushi@ximian.com>

	* XmlDocumentNavigator.cs : added UnderlyingObject as to behave as
	  documented in MSDN.

2005-12-14  Atsushi Enomoto <atsushi@ximian.com>

	* XmlNode.cs : under 2.0 xml/xmlns are treated as special cases in
	  GetNamespaceOfPrefix()/GetPrefixOfNamespace() (but it still does not
	  implement IXmlNamespaceResolver, bummer).

2005-12-14  Atsushi Enomoto <atsushi@ximian.com>

	* XmlDocument.cs : changed some exception types.
	* XmlDocumentNavigator.cs : added 2.0 SchemaInfo.

2005-12-13  Atsushi Enomoto <atsushi@ximian.com>

	* XmlTextReader.cs : 1.x build fix.

2005-12-13  Atsushi Enomoto <atsushi@ximian.com>

	* XmlTextReader.cs : when XmlReader.Create() creates this instance,
	  don't expect strict text declaration. Check SkipTextDeclaration()
	  on Read().

2005-12-12  Atsushi Enomoto <atsushi@ximian.com>

	* XmlReader.cs : fixed several misconception in MoveToNextSibling().
	  It should check its ReadState to avoid infinite loop.

2005-12-12  Atsushi Enomoto <atsushi@ximian.com>

	* XmlException.cs : added another .ctor() overload that takes both
	  IXmlLineInfo and innerException.
	* XmlQualifiedName.cs : added Parse() overload that takes XmlReader
	  (since XmlReader is not IXmlNamespaceResolver anymore).
	* XmlReader.cs : made several fixes on 2.0 ReadContentAs(),
	  ReadElementContentAs() and all of its variants.

2005-12-09  Atsushi Enomoto <atsushi@ximian.com>

	* XmlInputStream.cs :
	  Added Encoding property on NonBlockingStreamReader
	* XmlTextReader.cs :
	  set Encoding property when it proceeds to xml declaration.

2005-12-09  Atsushi Enomoto <atsushi@ximian.com>

	* XmlReader.cs : ReadToDescendant() should work when its ReadState is
	  Initial.

2005-12-09  Atsushi Enomoto <atsushi@ximian.com>

	* XmlChar.cs : removed incorrect comment.