@@ -1,3 +1,7 @@
+2005-12-15  Konstantin Triger <kostat@mainsoft.com>
+
+	* XmlTextWriterTests.cs: added WriteCDataNull test.
+
 2005-12-14  Atsushi Enomoto <atsushi@ximian.com>
 
 	* XmlDocumentTests.cs : (CreateNodeNodeTypeName) the previous fix was 
